--- a/pages/weekly_nerd-4.html
+++ b/pages/weekly_nerd-4.html
@@ -4,6 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Font-awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/60177191?v=4" />
     <title>Weekly nerd</title>
@@ -27,9 +30,18 @@
         </section>
     </header>
 
-    <main>
-        <section class="container">
-            <div class="cardGrid"></div>
+    <main class="container">
+        <section class="details">
+            <div class="detailsInfo">
+                <h3>Info</h3>
+                <p>
+
+                </p>
+
+                <p>
+
+                </p>
+            </div>
         </section>
     </main>
 
