--- a/index.html
+++ b/index.html
@@ -29,8 +29,51 @@
 
     <main>
         <section class="container">
+
+            <h2>Sprekers</h2>
             <div class="cardGrid"></div>
+
+            <hr />
         </section>
+        <section class="container">
+            <h2>Hackathon</h2>
+            <p>
+                <span>Teamleden: <b>David, Kim, Tymo</b></span><br />
+                <span>Datum: <b>2025/03/24 - 2025/03/27</b></span><br />
+                <span>Onderwerp: <b>Woman in tech</b></span>
+            </p>
+
+            <h3>Het idee</h3>
+
+            <p>
+                Het idee van onze Hackathon was om een wie ben ik spel te maken in de vorm van wie ben ik.<br />
+                Het werkt via kaartjes in een carrousel. Je krijgt een lijst met een namen van de vrouwen in de tech
+                wereld en dat je aan de hand van vragen moet raden wie het is.<br />
+            </p>
+
+            <h3>Het Resultaat</h3>
+
+            <p>
+                De uitkomst van de Hackathon is dat we een werkend prototype hebben gemaakt van het spel.<br />
+                Na de juryleden hebben beoordeeld, hebben we de hackathon gewonnen met ons idee en 3 kaarten voor
+                <b>CSS</b> day behaald.
+            </p>
+
+            <hr />
+        </section>
+
+        <section class="container">
+            <h2>Meesterproef</h2>
+            <p>
+
+            </p>
+
+            <b>Mijn leerdoelen</b>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
     </main>
 
     <footer>
