--- a/pages/weekly_nerd-2.html
+++ b/pages/weekly_nerd-2.html
@@ -35,11 +35,13 @@
             <div class="detailsInfo">
                 <h3>Info</h3>
                 <p>
-
+                    Peter paul koch is een nederlandse programmeur die in 
+                    1994 de eerste versie van de <b>PHP</b> programmeertaal heeft ontwikkeld.
                 </p>
 
                 <p>
-
+                    Peter paul koch is langsgekomen bij de HVA om te vertellen over webmonitisation.
+                    Webmonitisation is een manier om via je website geld te verdienen zonder dat je advertenties hoeft te plaatsen.
                 </p>
             </div>
         </section>
