--- a/pages/weekly_nerd-3.html
+++ b/pages/weekly_nerd-3.html
@@ -35,11 +35,12 @@
             <div class="detailsInfo">
                 <h3>Info</h3>
                 <p>
-
-                </p>
-
-                <p>
-
+                    Gsap is een JavaScript library die het makkelijker maakt om animaties te maken.
+                    Het is een krachtige en flexibele tool die veel mogelijkheden biedt voor het creëren van
+                    complexe animaties met weinig code. Gsap is vooral populair onder webontwikkelaars
+                    en designers vanwege de snelheid en prestaties.
+                    Het biedt ook ondersteuning voor verschillende browsers en apparaten,
+                    waardoor het een uitstekende keuze is voor het maken van responsieve animaties.
                 </p>
             </div>
         </section>
