--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Font-awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/60177191?v=4" />
     <title>Weekly nerd</title>
@@ -59,6 +62,8 @@
                 <b>CSS</b> day behaald.
             </p>
 
+            <p>De link naar ons project vind je <a href="https://tymonl.github.io/Hackathon/" target="_blank">hier</a>.</p>
+
             <hr />
         </section>
 
@@ -77,7 +82,10 @@
     </main>
 
     <footer>
-
+        <p>
+            <i class="fa-regular fa-copyright"></i>
+            2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
+        </p>
     </footer>
 </body>
 
