--- a/pages/weekly_nerd-2.html
+++ b/pages/weekly_nerd-2.html
@@ -35,20 +35,61 @@
             <div class="detailsInfo">
                 <h3>Info</h3>
                 <p>
-                    Peter paul koch is een nederlandse programmeur die in 
+                    Peter paul koch is een nederlandse programmeur die in
                     1994 de eerste versie van de <b>PHP</b> programmeertaal heeft ontwikkeld.
                 </p>
 
                 <p>
                     Peter paul koch is langsgekomen bij de HVA om te vertellen over webmonitisation.
-                    Webmonitisation is een manier om via je website geld te verdienen zonder dat je advertenties hoeft te plaatsen.
+                    Webmonitisation is een manier om via je website geld te verdienen zonder dat je advertenties hoeft
+                    te plaatsen.
+                </p>
+
+                <hr />
+
+                <h4>Webmonitisation</h4>
+
+                <h5>Waarom is het web gratis?</h5>
+                <p>
+                <ul>
+                    <li>Aanleren om te betalen</li>
+                    <li>Betalen voor je bezoeken</li>
+                    <li>Met tijd meten hoeveel je zou moeten betalen</li>
+                </ul>
+                </p>
+
+                <h5>Hoe moet het werken</h5>
+                <p>
+                <ul>
+                    <li>Een wallet</li>
+                    <li>Een extentie</li>
+                    <li>Een rate</li>
+                </ul>
+                </p>
+
+                <h5>Web monitisation agent</h5>
+                <p>
+                <ul>
+                    <li>Vindt link</li>
+                    <li>Vuurt betaling af</li>
+                    <li>Vuurt monitisation event af</li>
+                </ul>
+                </p>
+
+                <h5>Waarom webmonitisation</h5>
+                <p>
+                    Om meer content te krijgen,
+                    wat mensen graag schrijven en zodat niet alleen grote bedrijven bepalen wat jij ziet.
                 </p>
             </div>
         </section>
     </main>
 
     <footer>
-
+        <p>
+            <i class="fa-regular fa-copyright"></i>
+            2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
+        </p>
     </footer>
 </body>
 
