--- a/pages/weekly_nerd-3.html
+++ b/pages/weekly_nerd-3.html
@@ -34,6 +34,8 @@
         <section class="details">
             <div class="detailsInfo">
                 <h3>Info</h3>
+
+                <h4>Wat is GSAP</h4>
                 <p>
                     Gsap is een JavaScript library die het makkelijker maakt om animaties te maken.
                     Het is een krachtige en flexibele tool die veel mogelijkheden biedt voor het creëren van
@@ -42,12 +44,35 @@
                     Het biedt ook ondersteuning voor verschillende browsers en apparaten,
                     waardoor het een uitstekende keuze is voor het maken van responsieve animaties.
                 </p>
+
+                <h4>Stappenplan</h4>
+                <p>
+                    <ol>
+                        <li>Core functionaliteiten</li>
+                        <li>Simpelste technologie</li>
+                        <li>Verbeteren</li>
+                    </ol>
+                </p>
+
+                <h4>Storage</h4>
+                <p>
+                    <ul>
+                        <li>Cookies</li>
+                        <li>Local storage</li>
+                        <li>Session storage</li>
+                        <li>IndexDB</li>
+                        <li>Cache API</li>
+                    </ul>
+                </p>
             </div>
         </section>
     </main>
 
     <footer>
-
+        <p>
+            <i class="fa-regular fa-copyright"></i>
+            2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
+        </p>
     </footer>
 </body>
 
