--- a/pages/weekly_nerd-5.html
+++ b/pages/weekly_nerd-5.html
@@ -35,18 +35,73 @@
             <div class="detailsInfo">
                 <h3>Info</h3>
                 <p>
+                    KISS (Keep it simple stupid) is een ontwerpprincipe dat benadrukt dat systemen en ontwerpen eenvoudig moeten worden gehouden. Het idee is dat eenvoud vaak leidt tot betere bruikbaarheid, onderhoudbaarheid en betrouwbaarheid. 
 
+                    <h5>Principes van KISS:</h5>
+                    <ul>
+                        <li>Vermijd onnodige complexiteit.</li>
+                        <li>Focus op de kernfunctionaliteit.</li>
+                        <li>Maak ontwerpen intuïtief en gemakkelijk te begrijpen.</li>
+                    </ul>
+
+                    <h5>Voordelen:</h5>
+                    <ul>
+                        <li>Vermindert de kans op fouten.</li>
+                        <li>Maakt systemen gemakkelijker te onderhouden.</li>
+                        <li>Verbetert de gebruikerservaring.</li>
+                    </ul>
+
+                    <h5>Voorbeelden:</h5>
+                    <ul>
+                        <li>Gebruik duidelijke en eenvoudige code in softwareontwikkeling.</li>
+                        <li>Ontwerp interfaces met minimale afleiding en een focus op de belangrijkste functies.</li>
+                        <li>Vermijd over-engineering in technische oplossingen.</li>
+                    </ul>
                 </p>
 
-                <p>
+                <hr />
 
+                <h4>Git bash</h4>
+                <p>
+                    Git Bash is een applicatie voor Microsoft Windows die een emulatie van een Unix-shell biedt en de Git-opdrachtregeltools bevat. Het wordt vaak gebruikt door ontwikkelaars om Git-repository's te beheren en met Git te werken via de opdrachtregel.
+
+                    <h5>Belangrijke commando's:</h5>
+                    <ul>
+                        <li><code>git init</code> - Initialiseert een nieuwe Git-repository.</li>
+                        <li><code>git clone [url]</code> - Kopieert een bestaande repository naar je lokale machine.</li>
+                        <li><code>git status</code> - Toont de status van wijzigingen in de repository.</li>
+                        <li><code>git add [bestand]</code> - Voegt wijzigingen toe aan de staging area.</li>
+                        <li><code>git commit -m "bericht"</code> - Slaat wijzigingen op met een commit-bericht.</li>
+                        <li><code>git push</code> - Verzendt lokale commits naar een remote repository.</li>
+                        <li><code>git pull</code> - Haalt wijzigingen op van een remote repository en voegt ze samen.</li>
+                    </ul>
+
+                    <h5>Voordelen:</h5>
+                    <ul>
+                        <li>Ondersteunt krachtige Git-functionaliteiten.</li>
+                        <li>Biedt een Unix-achtige omgeving op Windows.</li>
+                        <li>Compatibel met shell-scripts en andere Unix-tools.</li>
+                    </ul>
+                </p>
+
+                <hr />
+
+                <h4>Repair cafe</h4>
+                <p>
+                    Het Repair Café is een bijeenkomst waar vrijwilligers helpen bij het repareren van kapotte spullen. 
+                    Het doel is om afval te verminderen en mensen te leren hoe ze hun spullen kunnen herstellen. 
+                    Neem je kapotte apparaten, kleding of andere items mee en werk samen met deskundige 
+                    vrijwilligers om ze te repareren.
                 </p>
             </div>
         </section>
     </main>
 
     <footer>
-
+        <p>
+            <i class="fa-regular fa-copyright"></i>
+            2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
+        </p>
     </footer>
 </body>
 
