--- a/pages/weekly_nerd-6.html
+++ b/pages/weekly_nerd-6.html
@@ -68,7 +68,10 @@
     </main>
 
     <footer>
-
+        <p>
+            <i class="fa-regular fa-copyright"></i>
+            2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
+        </p>
     </footer>
 </body>
 
