--- a/pages/weekly_nerd-7.html
+++ b/pages/weekly_nerd-7.html
@@ -33,21 +33,45 @@
     <main class="container">
         <section class="details">
             <div class="detailsInfo">
-                <h3>Rule of least power</h3>
+                <h3>Inclusive design & accessibility</h3>
+                
+                <h4>Wat is accessibility?</h4>
                 <p>
-                    Als een probleem in meerdere talen opgelost kan worden. Los dan het probleem op in de <b>minst</b>
-                    krachtige taal.
+                    Accessibility is het toegankelijk maken van een website voor iedereen. 
+                    Dit houdt in dat de website ook goed te gebruiken is voor mensen met een beperking. 
+                    Dit kan zijn een visuele beperking, motorische beperking of een auditieve beperking. 
+                    Het is belangrijk dat de website ook goed te gebruiken is voor deze mensen, 
+                    zodat zij ook gebruik kunnen maken van de website. 
+                    Dit kan door bijvoorbeeld goede contrasten te gebruiken, 
+                    goede alt-teksten te gebruiken en de website goed te laten werken met een toetsenbord.
                 </p>
 
+                <h4>Keyboard testing</h4>
                 <p>
+                    Keyboard testing is het testen van de website met alleen een toetsenbord. 
+                    Dit houdt in dat je de website moet kunnen gebruiken zonder een muis. 
+                    Dit is belangrijk omdat niet iedereen een muis kan gebruiken. 
+                    Dit kan zijn door een motorische beperking of omdat iemand gewoon geen muis heeft. 
+                    Het is belangrijk dat de website ook goed te gebruiken is met alleen een toetsenbord.
+                </p>
 
+                <h4>Contrast</h4>
+                <p>
+                    Contrast is het verschil tussen de achtergrondkleur en de tekstkleur. 
+                    Dit is belangrijk omdat het ervoor zorgt dat de tekst goed leesbaar is. 
+                    Dit is belangrijk voor mensen met een visuele beperking, 
+                    maar ook voor mensen die gewoon moeite hebben met lezen. 
+                    Het is belangrijk dat de tekst goed leesbaar is, zodat iedereen de website kan gebruiken.
                 </p>
             </div>
         </section>
     </main>
 
     <footer>
-
+        <p>
+            <i class="fa-regular fa-copyright"></i>
+            2025 <a href="https://github.com/tymoNL">Tymo Smids</a> Alle rechten voorbehouden
+        </p>
     </footer>
 </body>
 
