--- a/pages/weekly_nerd-8.html
+++ b/pages/weekly_nerd-8.html
@@ -33,29 +33,21 @@
     <main class="container">
         <section class="details">
             <div class="detailsInfo">
-                <h3>Info</h3>
-
-                <h4>Imperative programming</h4>
+                <h3>Defenitie van accessibility</h3>
                 <p>
-                    <ol>
-                        <li>maak array van items</li>
-                        <li>Loop door elk item heen</li>
-                    </ol>
+                    De kwaliteit van het kunnen gebruiken van een service, waar iedereen, 
+                    inclusief mensen met een beperking, toegang tot heeft en gebruik van kan maken.
                 </p>
 
-                <h4>Declarative programming</h4>
+                <h4>Wetgeving</h4>
                 <p>
                     <ul>
-                        <li>Gestructureerd</li>
-                        <li>Query</li>
-                        <li>Language</li>
+                        <li>Wcag</li>
+                        <li>EU Wetgeving</li>
+                        <li>Nieuwe Nederlandse wetgeving</li>
                     </ul>
-
-                    Selecteer items van table waar conditie waar is.
+                    
                 </p>
-
-                <h4>Imperative of Declarative programmeren</h4>
-                <p>Dat ligt eraan...</p>
             </div>
         </section>
     </main>
