--- a/pages/weekly_nerd-2.html
+++ b/pages/weekly_nerd-2.html
@@ -12,18 +12,18 @@
     <title>Weekly nerd</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/font.css" />
+    <link rel="stylesheet" href="/Weekly-nerd/css/styles.css">
+    <link rel="stylesheet" href="/Weekly-nerd/css/font.css" />
 
     <!-- JS -->
-    <script src="../js/script.js" defer></script>
+    <script src="/Weekly-nerd/js/script.js" defer></script>
 </head>
 
 <body>
     <header>
         <section class="container">
             <div class="flexBox">
-                <h1><a href="../index.html">Weelky nerd</a></h1>
+                <h1><a href="/Weekly-nerd/index.html">Weelky nerd</a></h1>
 
                 <h2><a href="https://github.com/tymoNL" target="_blank">Tymo Smids</a></h2>
             </div>
