--- a/index.html
+++ b/index.html
@@ -62,9 +62,28 @@
                 <b>CSS</b> day behaald.
             </p>
 
-            <p>De link naar ons project vind je <a href="https://tymonl.github.io/Hackathon/" target="_blank">hier</a>.</p>
+            <p>De link naar ons project vind je <a href="https://tymonl.github.io/Hackathon/" target="_blank">hier</a>.
+            </p>
 
             <hr />
+        </section>
+
+        <section class="container">
+            <h2>Reflectie</h2>
+
+            <h3>Wat wil ik meenemen</h3>
+            <p>
+                De punten die ik wil meenemen naar de meesterproef zijn de <b>Rule of least power</b> en <b>KISS</b>
+                (Keep it simple stupid). Deze princiepes zorgen ervoor dat de code makkelijk aan te passen en uitbreidbaar is.
+            </p>
+
+            <h3>Hoe gaat het nu</h3>
+            <ul>
+                <li>:<b>Grootste leermoment:</b> Documentatie schrijven</li>
+                <li><b>Viel mee:</b> De samenwerking</li>
+                <li><b>Nog lastig:</b> Nieuwe dingen uitproberen</li>
+                <li><b>Trots op:</b> De gemaakte projecten</li>
+            </ul>
         </section>
 
         <section class="container">
@@ -75,10 +94,11 @@
 
             <b>Mijn leerdoelen</b>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Meerdere manieren bedenken om een iets op te lossen</li>
+                <li>Vaker feedback vragen aan klasgenoten & docenten</li>
+                <li>Optijd documenteren om te zorgen dat het up- to date blijft</li>
             </ul>
+        </section>
     </main>
 
     <footer>
