--- a/index.html
+++ b/index.html
@@ -12,92 +12,154 @@
     <title>Weekly nerd</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/Weekly-nerd/css/styles.css">
-    <link rel="stylesheet" href="/Weekly-nerd/css/font.css" />
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/font.css" />
 
     <!-- JS -->
-    <script src="/Weekly-nerd/js/script.js" defer></script>
+    <script src="/js/script.js" defer></script>
 </head>
 
-<body>
+<body class="light">
     <header>
         <section class="container">
             <div class="flexBox">
-                <h1><a href="/Weekly-nerd/index.html">Weelky nerd</a></h1>
+                <h1><a href="/index.html">Weelky nerd</a></h1>
 
                 <h2><a href="https://github.com/tymoNL" target="_blank">Tymo Smids</a></h2>
+
+                <a href="javascript:;" id="colorSwitch"><i class="fa-solid fa-moon"></i></a>
             </div>
         </section>
     </header>
 
-    <main>
+    <main class="index">
         <section class="container">
+            <div>
 
-            <h2>Sprekers</h2>
-            <div class="cardGrid"></div>
+                <h2>Sprekers</h2>
+                <div class="cardGrid"></div>
 
-            <hr />
+            </div>
         </section>
         <section class="container">
-            <h2>Hackathon</h2>
-            <p>
-                <span>Teamleden: <b>David, Kim, Tymo</b></span><br />
-                <span>Datum: <b>2025/03/24 - 2025/03/27</b></span><br />
-                <span>Onderwerp: <b>Woman in tech</b></span>
-            </p>
+            <div class="box">
+                <h2>Hackathon</h2>
+                <p>
+                    <span>Teamleden: <b>David, Kim, Tymo</b></span><br />
+                    <span>Datum: <b>2025/03/24 - 2025/03/27</b></span><br />
+                    <span>Onderwerp: <b>Woman in tech</b></span>
+                </p>
 
-            <h3>Het idee</h3>
+                <h3>Het idee</h3>
 
-            <p>
-                Het idee van onze Hackathon was om een wie ben ik spel te maken in de vorm van wie ben ik.<br />
-                Het werkt via kaartjes in een carrousel. Je krijgt een lijst met een namen van de vrouwen in de tech
-                wereld en dat je aan de hand van vragen moet raden wie het is.<br />
-            </p>
+                <p>
+                    Het idee van onze Hackathon was om een wie ben ik spel te maken in de vorm van wie ben ik.<br />
+                    Het werkt via kaartjes in een carrousel. Je krijgt een lijst met een namen van de vrouwen in de tech
+                    wereld en dat je aan de hand van vragen moet raden wie het is.<br />
+                </p>
 
-            <h3>Het Resultaat</h3>
+                <h3>Het Resultaat</h3>
 
-            <p>
-                De uitkomst van de Hackathon is dat we een werkend prototype hebben gemaakt van het spel.<br />
-                Na de juryleden hebben beoordeeld, hebben we de hackathon gewonnen met ons idee en 3 kaarten voor
-                <b>CSS</b> day behaald.
-            </p>
+                <p>
+                    De uitkomst van de Hackathon is dat we een werkend prototype hebben gemaakt van het spel.<br />
+                    Na de juryleden hebben beoordeeld, hebben we de hackathon gewonnen met ons idee en 3 kaarten voor
+                    <b>CSS</b> day behaald.
+                </p>
 
-            <p>De link naar ons project vind je <a href="https://tymonl.github.io/Hackathon/" target="_blank">hier</a>.
-            </p>
+                <p>De link naar ons project vind je <a href="https://tymonl.github.io/Hackathon/"
+                        target="_blank">hier</a>.
+                </p>
 
-            <hr />
-        </section>
-
-        <section class="container">
-            <h2>Reflectie</h2>
-
-            <h3>Wat wil ik meenemen</h3>
-            <p>
-                De punten die ik wil meenemen naar de meesterproef zijn de <b>Rule of least power</b> en <b>KISS</b>
-                (Keep it simple stupid). Deze princiepes zorgen ervoor dat de code makkelijk aan te passen en uitbreidbaar is.
-            </p>
-
-            <h3>Hoe gaat het nu</h3>
-            <ul>
-                <li>:<b>Grootste leermoment:</b> Documentatie schrijven</li>
-                <li><b>Viel mee:</b> De samenwerking</li>
-                <li><b>Nog lastig:</b> Nieuwe dingen uitproberen</li>
-                <li><b>Trots op:</b> De gemaakte projecten</li>
-            </ul>
+            </div>
         </section>
 
         <section class="container">
-            <h2>Meesterproef</h2>
-            <p>
+            <div class="box">
+                <h2>Reflectie</h2>
 
-            </p>
+                <h3>Wat wil ik meenemen</h3>
+                <p>
+                    De punten die ik wil meenemen naar de meesterproef zijn de <b>Rule of least power</b> en <b>KISS</b>
+                    (Keep it simple stupid). Deze princiepes zorgen ervoor dat de code makkelijk aan te passen en
+                    uitbreidbaar is.
+                </p>
 
-            <b>Mijn leerdoelen</b>
-            <ul>
-                <li>Meerdere manieren bedenken om een iets op te lossen</li>
-                <li>Vaker feedback vragen aan klasgenoten & docenten</li>
-                <li>Optijd documenteren om te zorgen dat het up- to date blijft</li>
-            </ul>
+                <h3>Hoe gaat het nu</h3>
+                <ul>
+                    <li><b>Grootste leermoment:</b> Documentatie schrijven</li>
+                    <li><b>Viel mee:</b> De samenwerking</li>
+                    <li><b>Nog lastig:</b> Nieuwe dingen uitproberen</li>
+                    <li><b>Trots op:</b> De gemaakte projecten</li>
+                </ul>
+
+            </div>
+        </section>
+
+        <section class="container">
+            <div class="box">
+                <h2>Meesterproef</h2>
+
+                <h3>Mijn leerdoelen</h3>
+                <ul>
+                    <li>Meerdere manieren bedenken om een iets op te lossen</li>
+                    <li>Vaker feedback vragen aan klasgenoten & docenten</li>
+                    <li>Optijd documenteren om te zorgen dat het up- to date blijft</li>
+                </ul>
+
+                <h3>GitHub</h3>
+                <p>
+                <ul>
+                    <li><a href="https://github.com/tymoNL/Meesterproef_liquid" target="_blank">Liquid repository</a>
+                    </li>
+                    <li><a href="https://github.com/tymoNL/Oost-west_thuis_best" target="_blank">Oude HTML
+                            repository</a>
+                    </li>
+                </ul>
+                </p>
+
+            </div>
+        </section>
+
+        <section class="container">
+            <div class="box">
+                <h2>CSS day</h2>
+
+                <h3>Wat is CSS day</h3>
+                <p>
+                    De CSS day is een evenement dat plaatsvindt op 2025/04/11 in Amsterdam. Het is een dag vol met
+                    presentaties en workshops over CSS en webontwikkeling. Het is een geweldige kans om meer te leren
+                    over
+                    CSS en om in contact te komen met andere ontwikkelaars.
+                </p>
+                <p>
+                    <a href="https://cssday.nl/" target="_blank">Meer informatie over CSS day</a>
+                </p>
+
+                <h3>Sprekers</h3>
+
+                <h4>2025-06-05</h4>
+                <ul>
+                    <li>Adam Argyle</li>
+                    <li>John Allsopp</li>
+                    <li>Miriam suzanne</li>
+                    <li>Cyd Stumpel</li>
+                    <li>Brecht de Ruyte</li>
+                    <li>Rachel Andrew</li>
+                    <li>Brad & Ian Frost</li>
+                </ul>
+
+                <h4>2025-06-06</h4>
+                <ul>
+                    <li>Cris Coyier</li>
+                    <li>Ahmad Shadeed</li>
+                    <li>Tim Nguyen</li>
+                    <li>Amid Sheen</li>
+                    <li>Ana Rodrigues</li>
+                    <li>Hidde de Vries</li>
+                    <li>Bruce Lawson</li>
+                </ul>
+
+            </div>
         </section>
     </main>
 
