almost final version

--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
             </div>
         </section>
         <section class="container">
-            <div class="box">
-                <h2>Hackathon</h2>
+            <details class="box">
+                <summary>
+                    <h2>Hackathon</h2>
+                </summary>
+
                 <p>
                     <span>Teamleden: <b>David, Kim, Tymo</b></span><br />
                     <span>Datum: <b>2025/03/24 - 2025/03/27</b></span><br />
@@ -70,12 +73,14 @@
                         target="_blank">hier</a>.
                 </p>
 
-            </div>
+            </details>
         </section>
 
         <section class="container">
-            <div class="box">
-                <h2>Reflectie</h2>
+            <details class="box">
+                <summary>
+                    <h2>Reflectie</h2>
+                </summary>
 
                 <h3>Wat wil ik meenemen</h3>
                 <p>
@@ -92,12 +97,14 @@
                     <li><b>Trots op:</b> De gemaakte projecten</li>
                 </ul>
 
-            </div>
+            </details>
         </section>
 
         <section class="container">
-            <div class="box">
-                <h2>Meesterproef</h2>
+            <details class="box">
+                <summary>
+                    <h2>Meesterproef</h2>
+                </summary>
 
                 <h3>Mijn leerdoelen</h3>
                 <ul>
@@ -117,12 +124,47 @@
                 </ul>
                 </p>
 
-            </div>
+                <h3>Reflectie op eigen niveau</h3>
+                <p>
+                    Voor de meesterproef heb ik meerdere leerdoelen moeten aangeven. Aan deze leerdoelen heb ik kunnen
+                    werken tijdens de meesterproef om hier in te kunnen verbeteren. Hoe ik aan deze leerdoelen heb
+                    kunnen werken, lees je hieronder.
+                </p>
+
+                <h4>Meerdere manieren bedenken om een iets op te lossen</h4>
+                <p>
+                    Tijdens de meesterproef zijn er op meerdere momenten problemen geweest die op meerdere manieren
+                    opgelost konden worden. Een van die problemen was het responsive maken van een horizontale slider.
+                </p>
+
+                <p>
+                    Mijn eerste oplossing was om een <code>overflow: hidden;</code> op de container te plaatsen. Dit was
+                    echter niet
+                    de beste oplossing omdat dit ook problemen gaf voor andere ontwerp ideeën. Het probleem is daarna op
+                    een andere manier opgelost om de website responsive en uitbreidbaar te maken.
+                </p>
+
+                <h4>Vaker feedback vragen aan klasgenoten & docenten</h4>
+                <p>
+                    Tijdens de meesterproef zijn er momenten voor studenten om feedback te vragen aan docenten. Deze
+                    momenten heb ik gebruikt om te vragen wat ik het best kon doen op bepaalde momenten zoals
+                    communicatie met de opdrachtgever en meer technische vragen zoals server sided code.
+                </p>
+
+                <h4>Optijd documenteren om te zorgen dat het up- to date blijft</h4>
+                <p>
+                    Om te zorgen dat de documentatie up-to date is gebleven heb ik elke week de documentatie bijgewerkt
+                    doormiddel van een <b>Product Biografie</b>. Deze biografie is te vinden in de <b>Repository</b> van
+                    de meesterproef.
+                </p>
+            </details>
         </section>
 
         <section class="container">
-            <div class="box">
-                <h2>CSS day</h2>
+            <details class="box">
+                <summary>
+                    <h2>CSS day</h2>
+                </summary>
 
                 <h3>Wat is CSS day</h3>
                 <p>
@@ -159,7 +201,7 @@
                     <li>Bruce Lawson</li>
                 </ul>
 
-            </div>
+            </details>
         </section>
     </main>
 
