--- a/pages/weekly_nerd-10.html
+++ b/pages/weekly_nerd-10.html
@@ -33,7 +33,7 @@
     <main class="container">
         <section class="details">
             <div class="detailsInfo">
-                <h2>Digitale toegang in de praktijk</h2>
+                <h2>Experience is everything</h2>
             </div>
         </section>
     </main>
