--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/60177191?v=4" />
     <title>Weekly nerd</title>
 
+    <base href="/Weekly-nerd/" />
+
     <!-- CSS -->
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/font.css" />
