--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/60177191?v=4" />
     <title>Weekly nerd</title>
 
-    <base href="/Weekly-nerd/" />
-
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/font.css" />
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/font.css" />
 
     <!-- JS -->
     <script src="/js/script.js" defer></script>
