--- a/pages/weekly_nerd-14.html
+++ b/pages/weekly_nerd-14.html
@@ -12,20 +12,22 @@
     <title>Weekly nerd</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/font.css" />
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/font.css" />
 
     <!-- JS -->
-    <script src="/js/script.js" defer></script>
+    <script src="../js/script.js" defer></script>
 </head>
 
-<body>
+<body class="light">
     <header>
         <section class="container">
             <div class="flexBox">
                 <h1><a href="/index.html">Weelky nerd</a></h1>
 
                 <h2><a href="https://github.com/tymoNL" target="_blank">Tymo Smids</a></h2>
+
+                <a href="javascript:;" id="colorSwitch"><i class="fa-solid fa-moon"></i></a>
             </div>
         </section>
     </header>
