--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/font.css" />
 
     <!-- JS -->
-    <script src="/js/script.js" defer></script>
+    <script src="js/script.js" defer></script>
 </head>
 
 <body class="light">
